force-app/main/default/objects/LPCR_AppelServiceExterne__mdt/LPCR_AppelServiceExterne__mdt.object-meta.xml
<CustomObject>
    <label>Information Appel Service Externe</label>
    <pluralLabel>Informations Appel Services Externes</pluralLabel>
</CustomObject>