force-app/main/default/objects/LPCR_AppelServiceExterne__mdt/fields/LPCR_CodeRetour__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeRetour__c</fullName>
    <label>Code de retour</label>
    <length>5</length>
    <type>Text</type>
</CustomField>