force-app/main/default/objects/LPCR_AppelServiceExterne__mdt/fields/LPCR_MessageRetour__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MessageRetour__c</fullName>
    <label>Message de retour</label>
    <length>250</length>
    <type>Text</type>
</CustomField>