force-app/main/default/objects/LPCR_AppelServiceExterne__mdt/fields/LPCR_NomService__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomService__c</fullName>
    <label>Nom du Service</label>
    <length>30</length>
    <type>Text</type>
</CustomField>